# sltools

./: README.md  pyproject.toml
src/sltools/bandcamp_import/: __main__.py
src/sltools/pdf_rename/: __main__.py  metadata.py
